로그인 화면 UI 코드 리팩토링

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,10 @@
         <activity android:name=".Result2Activity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".RegActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"/> <!-- 상단 타이틀 바 제거-->
+        <activity android:name=".MainActivity"
+        />
     </application>
 
 </manifest>
