--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,20 +24,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GrammerActivity"></activity>
-        <activity android:name=".SelectActivity"></activity>
-        <activity android:name=".ProblemActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ProblemStepActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".Result2Activity" />
-        <activity android:name=".ResultActivity" />
-        <activity android:name=".RegActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/> <!-- 상단 타이틀 바 제거-->
-        <activity android:name=".MainActivity"
-        />
+        <activity
+            android:name=".GrammerActivity"
+            android:theme="@style/AppTheme.NoActionBar">>
+        </activity>
+        <activity
+            android:name=".SelectActivity"
+            android:theme="@style/AppTheme.NoActionBar">>
+        </activity>
+        <activity
+            android:name=".ProblemActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProblemStepActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Result2Activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ResultActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".RegActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- 상단 타이틀 바 제거-->
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
