--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-
+        <activity android:name=".SolvedProblemActivity"></activity>
         <activity
-            android:theme="@style/AppTheme.NoActionBar"
-            android:name=".GrammerDetailActivity">
-        </activity>
+            android:name=".GrammerDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
